[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kasm"
version = "1.18.1.0"
description = "Python client for the Kasm API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE*"]
authors = [{ name = "Quentin Coumes (Codoc)", email = "quentin@codoc.co" }]
keywords = ["kasm"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
  "aiohttp>=3.13.3,<4.0.0",
  "requests>=2.33.0,<3.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2,<2.0.0",
    "black>=25.12.0,<26.0.0",
    "click==8.2.1",
    "coverage>=7.13.1,<8.0.0",
    "isort>=7.0.0,<8.0.0",
    "mypy>=1.19.1,<2.0.0",
    "pycodestyle>=2.14.0,<3.0.0",
    "pydocstyle>=6.3.0,<7.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "types-requests>=2.32.4.20260107,<3.0.0.0",
    "pyflakes>=3.4.0,<4.0.0",
    "autoflake>=2.3.1,<3.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "mkdocs>=1.6.1,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/Codoc-os/pykasm"
Changelog = "https://github.com/Codoc-os/pykasm/blob/main/CHANGELOG.md"
Issues = "https://github.com/Codoc-os/pykasm/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["kasm", "kasm.*"]
